@@ -1,5 +1,8 @@
 {{$NEXT}}
     - Removed some module loading workd-arounds for Rakudo < 2019.03
+    - Support Dtd Notations. Added raw class xmlNotation, API class LibXML::Dtd::Notation
+      and LibXML::Dtd notations() method. Also changed LibXML::Dtd repr from 'CStruct'
+      to default, so that it may contain a $!notations attribute.
 
 0.6.0  2021-05-29T09:37:12+12:00
     - Fix attribute isId() method to return Bool, as documented.
